0.8.0/_sources/gallery/add_shapes_with_text.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_shapes_with_text.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_shapes_with_text.py:


Add shapes with text
====================

Display one shapes layer ontop of one image layer using the ``add_shapes`` and
``add_image`` APIs. When the window is closed it will print the coordinates of
your shapes.

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 11-64



.. image-sg:: /gallery/images/sphx_glr_add_shapes_with_text_001.png
   :alt: add shapes with text
   :srcset: /gallery/images/sphx_glr_add_shapes_with_text_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python


    import numpy as np
    from skimage import data

    import napari

    # add the image
    viewer = napari.Viewer()
    layer = viewer.add_image(data.camera(), name='photographer')

    # create a list of polygons
    polygons = [
        np.array([[225, 146], [283, 146], [283, 211], [225, 211]]),
        np.array([[67, 182], [167, 182], [167, 268], [67, 268]]),
        np.array([[111, 336], [220, 336], [220, 240], [111, 240]]),
    ]

    # create features
    features = {
        'likelihood': [21.23423, 51.2315, 100],
        'class': ['hand', 'face', 'camera'],
    }
    edge_color_cycle = ['blue', 'magenta', 'green']

    text = {
        'string': '{class}: {likelihood:0.1f}%',
        'anchor': 'upper_left',
        'translation': [-5, 0],
        'size': 8,
        'color': 'green',
    }

    # add polygons
    shapes_layer = viewer.add_shapes(
        polygons,
        features=features,
        shape_type='polygon',
        edge_width=3,
        edge_color='class',
        edge_color_cycle=edge_color_cycle,
        face_color='transparent',
        text=text,
        name='shapes',
    )

    # change some attributes of the layer
    shapes_layer.opacity = 1

    # To save layers to svg:
    # viewer.layers.save('viewer.svg', plugin='svg')

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_shapes_with_text.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_shapes_with_text.ipynb <add_shapes_with_text.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_shapes_with_text.py <add_shapes_with_text.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_shapes_with_text.zip <add_shapes_with_text.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
